spade-tests/src/snapshots/spade_tests__hir_lowering__tests__div_by_non_pow2_constant_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn x(a: int<8>) -> int<8> {
    5 / 3
}

error: Division can only be performed on powers of two
  ┌─ testinput:2:9
  │
2 │     5 / 3
  │         ^ Division by non-power-of-two value
  │
  = help: Non-power-of-two division is generally slow and should usually be done over multiple cycles.
  = If you are sure you want to divide by 3, use `std::ops::comb_div`
  │
2 │     5 `std::ops::comb_div` 3
  │       ~~~~~~~~~~~~~~~~~~~~
