spade-tests/src/snapshots/spade_tests__hir_lowering__tests__expect_entity_got_pipeline_error_works.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(0) x(clk: clock) -> bool {true}

entity test(clk: clock) -> bool {
    inst x(clk)
}

error: Expected x to be an entity
  ┌─ testinput:4:10
  │
1 │ pipeline(0) x(clk: clock) -> bool {true}
  │ ---------------------------------------- x is a pipeline
  ·
4 │     inst x(clk)
  │     ---- ^ Expected entity
  │     │     
  │     because of this inst
  │
  = Consider adding depth
  │
4 │     inst(0) x(clk)
  │         +++


