spade-tests/src/snapshots/spade_tests__hir_lowering__tests__expect_function_got_pipeline_error_works.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(0) x(clk: clock) -> bool {true}

entity test(clk: clock) -> bool {
    x(clk)
}

error: Expected x to be a function
  ┌─ testinput:4:5
  │
1 │ pipeline(0) x(clk: clock) -> bool {true}
  │ ---------------------------------------- x is a pipeline
  ·
4 │     x(clk)
  │     ^ Expected function
  │
  = consider adding inst
  │
4 │     inst(0) x(clk)
  │     ++++++++


