spade-tests/src/snapshots/spade_tests__hir_lowering__tests__expect_pipeline_got_entity_error_works.snap
---
source: spade-tests/src/hir_lowering.rs
---
entity x(clk: clock) -> bool {true}

entity test(clk: clock) -> bool {
    inst(0) x(clk)
}

error: Expected x to be a pipeline
  ┌─ testinput:4:13
  │
1 │ entity x(clk: clock) -> bool {true}
  │ ----------------------------------- x is an entity
  ·
4 │     inst(0) x(clk)
  │     ------- ^ Expected pipeline
  │     │        
  │     because of this inst
  │
  = Consider removing the depth
  │
4 │     inst x(clk)
  │     ~~~~


